Fix AtomicString regression caused by r201603. https://bugs.webkit.org/show_bug.cgi?id=158338

Reviewed by Chris Dumez.

No new tests (Refactor, plus already caught by existing test configs).

* loader/WorkerThreadableLoader.cpp:
(WebCore::WorkerThreadableLoader::MainThreadBridge::didReceiveResponse):

* platform/network/ResourceResponseBase.cpp:
(WebCore::ResourceResponseBase::crossThreadData): Re-introduce the cross thread data concept,
  but more modern and clean this time.
(WebCore::ResourceResponseBase::fromCrossThreadData):
(WebCore::ResourceResponseBase::isolatedCopy): Deleted.
* platform/network/ResourceResponseBase.h:

Canonical link: https://commits.webkit.org/176423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201637 268f45cc-cd09-0410-ab3c-d52691b4dbfc